Almost completed game testing Add check in round for players playing same cards when constrained